# netflix-project

./: .gitignore  AddCommandTests  CMakeLists.txt  Dockerfile  README.md  RecommendCommandTests  docker-compose.yml  et --hard <commit_hash>  package-lock.json
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/res/values/: colors.xml  (+2 more)
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
client/: Dockerfile  client.py
inc/: AddCommand.h  App.h  ConsoleMenu.h  HelloWorldCommand.h  HelpCommand.h  ICommand.h  IDataManager.h  IMenu.h  LocalDataManager.h  Movie.h  RecommendCommand.h  Types.h  User.h
react-client/: package-lock.json
react-client/public/: index.html
react-client/src/: App.js  index.js
react-client/src/components/Console/: DeleteCategory.js  DeleteMovie.js  PatchCategory.js  PostCategory.js  PostMovie.js  PutMovie.js
react-client/src/components/Home/: HomeBanner.js  HomeHeader.js  HomeMovieCategory.js  HomeSearchBar.js  MovieList.js
react-client/src/components/LandPage/: LandingContent.js  LandingHeader.js
react-client/src/components/MovieInfo/: MovieActions.js  MovieHeader.js
react-client/src/components/Shared/: Header.js  Layout.js  VideoPlayer.js  useUserRedirect.js
react-client/src/components/Shared/MainHeader/: Layout.js  MainHeader.js
react-client/src/components/SignIn/: SignInButton.js  SignInForm.js  SignInHeader.js  ThemeToggleButton.js
react-client/src/components/SignUp/: SignUpButton.js  SignUpForm.js  SignUpImageUpload.js  SignUpInput.js
react-client/src/pages/: CategoriesPage.css  CategoriesPage.js  ConsolePage.css  ConsolePage.js  HomePage.css  HomePage.js  LandingPage.css  LandingPage.js  LoginPage.js  MovieInfoPage.css  MovieInfoPage.js  SearchPage.css  SearchPage.js  SignInPage.css  SignInPage.js  SignUpPage.css  SignUpPage.js  VideoPage.css  VideoPage.js
react-client/src/services/: api.js
react-client/src/styles/: global.css  themes.css
server/: CMakeLists.txt  Dockerfile  Dockerfile.test  docker-compose.yml
server/inc/: AddCommand.h  ConsoleMenu.h  HelpCommand.h  IDataManager.h  IMenu.h  LocalDataManager.h  Movie.h  RecommendCommand.h  Server.h  SocketMenu.h  SocketRAII.h  Types.h  User.h
server/inc/commands/: AddCommand.h  DeleteCommand.h  HelpCommand.h  ICommand.h  PatchCommand.h  PostCommand.h  RecommendCommand.h
server/inc/core/: App.h  Server.h
server/inc/data_manager/: IDataManager.h  LocalDataManager.h
server/inc/menu/: ConsoleMenu.h  SocketMenu.h
server/inc/models/: User.h
server/inc/utils/: Config.h  InvalidCommandException.h  StatusCodeException.h  ThreadPool.h  Types.h
server/src/: AddCommand.cpp  App.cpp  ConsoleMenu.cpp  HelpCommand.cpp  LocalDataManager.cpp  Movie.cpp  RecommendCommand.cpp  Server.cpp  SocketMenu.cpp  User.cpp  main.cpp
server/src/commands/: AddCommand.cpp  DeleteCommand.cpp  HelpCommand.cpp  PatchCommand.cpp  PostCommand.cpp  RecommendCommand.cpp
server/src/core/: App.cpp  Server.cpp
server/src/data_manager/: LocalDataManager.cpp
server/src/menu/: ConsoleMenu.cpp  SocketMenu.cpp
server/src/models/: Movie.cpp  User.cpp
server/src/utils/: ThreadPool.cpp
server/tests/: AddCommandTest.cpp  CMakeLists.txt  HelpCommandTest.cpp  RecommendCommandTest.cpp  TestUtils.cpp
server/tests/commands/: AddCommandTest.cpp  DeleteCommandTest.cpp  HelpCommandTest.cpp  PatchCommandTest.cpp  PostCommandTest.cpp  RecommendCommandTest.cpp
server/tests/core/: MainTests.cpp
server/tests/utils/: TestUtils.cpp  TestUtils.h
src/: AddCommand.cpp  App.cpp  ConsoleMenu.cpp  HelloWorldCommand.cpp  HelpCommand.cpp  ICommand.cpp  LocalDataManager.cpp  Movie.cpp  RecommendCommand.cpp  User.cpp  main.cpp
tests/: AddCommandTest.cpp  CMakeLists.txt  MainTests.cpp  RecommendCommandTest.cpp  TestUtils.cpp  TestUtils.h  TestVars.cpp  TestVars.h
web/: Dockerfile  app.js  build-react.js  package-lock.json  package.json
web-server/: .dockerignore  .gitignore  docker-compose.yml
web-server/cpp-server/: CMakeLists.txt  Dockerfile  Dockerfile.test
web-server/cpp-server/data/: users.txt
web-server/cpp-server/inc/commands/: HelpCommand.h  RecommendCommand.h
web-server/cpp-server/inc/core/: Server.h
web-server/cpp-server/inc/data_manager/: IDataManager.h
web-server/cpp-server/inc/models/: Movie.h  User.h
web-server/cpp-server/inc/utils/: SocketRAII.h  Types.h
web-server/cpp-server/python-client/: Dockerfile  client.py
web-server/cpp-server/src/: main.cpp
web-server/cpp-server/src/commands/: AddCommand.cpp  PatchCommand.cpp  RecommendCommand.cpp
web-server/cpp-server/src/menu/: SocketMenu.cpp
web-server/cpp-server/src/models/: User.cpp
web-server/cpp-server/tests/: CMakeLists.txt
web-server/cpp-server/tests/utils/: TestUtils.cpp
web-server/nodejs-server/: Dockerfile  app.js  build-react.js
web-server/nodejs-server/clients/: MRSClient.js
web-server/nodejs-server/controllers/: movie.js  recommend.js
web-server/nodejs-server/middlewares/: multer.js
web-server/nodejs-server/models/: movie.js
web-server/nodejs-server/routes/: movie.js  user.js
web-server/nodejs-server/services/: movie.js  user.js
web-server/react-client/: package-lock.json  package.json
web-server/react-client/public/: index.html
web-server/react-client/src/: App.js
web-server/react-client/src/pages/: ConsolePage.js  HomePage.css  HomePage.js  LandingPage.css  LandingPage.js  MovieInfoPage.css  MovieInfoPage.js  SearchPage.css  SignInPage.css  SignInPage.js  SignUpPage.css  VideoPage.css  VideoPage.js
web-server/react-client/src/services/: api.js
web-server/react-client/src/styles/: global.css  themes.css
web/clients/: MRSClient.js
web/controllers/: category.js  movie.js  query.js  recommend.js  stream.js  token.js  user.js
web/middlewares/: multer.js
web/models/: category.js  counter.js  movie.js  user.js
web/routes/: category.js  movie.js  recommend.js  token.js  user.js
web/services/: category.js  counter.js  movie.js  user.js
web/utils/: consts.js  errors.js  helpers.js
(+90 files in other folders)
